log
Thu 09 May 2024 03:05:05 PM UTC: 
 tests:  1|8
total_score: 0/70
822ae0f
Thu 09 May 2024 03:11:00 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d4f2b73
Thu 09 May 2024 03:21:53 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
03bcbd6
Thu 09 May 2024 03:22:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
976c33a
Thu 09 May 2024 03:22:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b72b325
Thu 09 May 2024 03:25:24 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c1a6c3c
Thu 09 May 2024 03:27:43 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  6|7
total_score: 5/70
a78b4af
Thu 09 May 2024 03:28:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c751ad3
